--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.0",
+    "@types/jest": "^24.0.11",
     "babel-jest": "^24.5.0",
     "jest": "^24.5.0",
     "jest-stare": "^1.13.1",
@@ -29,5 +30,6 @@
         }
       ]
     ]
-  }
+  },
+  "dependencies": {}
 }
